fixed modal z-index on mobile

--- a/css/headerNavFooter.css
+++ b/css/headerNavFooter.css
@@ -246,7 +246,7 @@ nav {
         height: 64px;
         position: fixed;
         top: 0;
-        z-index: 99999;
+        z-index: 200;
         width: 100%;
     }
     html {
