--- a/css/home.css
+++ b/css/home.css
@@ -164,18 +164,7 @@
 }
 
 @media only screen and (max-width: 767px) {
-    .index-mb {
-        margin: 0 2rem;
-    }
-
     .help-grid {
-        column-gap: 20px;
-    }
-}
-
-@media only screen and (max-width: 576px) {
-    .help-grid {
-        column-gap: 20px;
         grid-template-columns: repeat(1, 1fr);
         row-gap: 2rem;
     }
